--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "italy"
+    "italy ="
    ]
   },
   {
