--- a/index.ipynb
+++ b/index.ipynb
@@ -184,12 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia', 'USA', 'Argentina', 'Mexico']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries[0:4]\n",
-    "mexico"
+    "countries[0:4]"
    ]
   },
   {
