--- a/index.ipynb
+++ b/index.ipynb
@@ -184,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia', 'USA', 'Argentina', 'Mexico']"
+       "'Mexico'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries[0:4]"
+    "countries[3]"
    ]
   },
   {
