--- a/index.ipynb
+++ b/index.ipynb
@@ -235,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append"
+    "countries.append('Malta')"
    ]
   },
   {
