--- a/index.ipynb
+++ b/index.ipynb
@@ -337,11 +337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[ = None # add code here]"
+    "countries[6]=\"USA\""
    ]
   },
   {
